--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+
+// CSS reset & normalization
+@import 'gardevoir/dist/mini.min.css';
+
 html {
   scroll-behavior: smooth;
 }
