feat: moar things

--- a/src/app/home-page/projects/project-item/project-item.component.html
+++ b/src/app/home-page/projects/project-item/project-item.component.html
@@ -18,5 +18,5 @@
   </div>
 </div>
 <div class="images">
-  <img *ngFor="let image of item.images" [src]="image" />
+  <img *ngFor="let image of item.images" [src]="image" alt="TODO" />
 </div>
