--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
 <div class="logo">
-  <img src="assets/logo.png" />
+  <img src="assets/logo.png" alt="Logo" />
 </div>
 <app-projects></app-projects>
