--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -15,9 +15,11 @@
     z-index: 10;
     display: flex;
     justify-content: center;
+    margin-left: margins.$m;
+    margin-right: margins.$m;
 
     img {
-      max-height: 150px;
+      max-height: 100px;
       width: auto;
     }
 
