feat: add muchas cosas (#7)
* feat: add muchas cosas

* feat: moar things

* feat(home): add padding for logo

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,1 +1,5 @@
-<p>home-page works!</p>
+<app-header></app-header>
+<div class="logo">
+  <img src="assets/logo.png" alt="Logo" />
+</div>
+<app-projects></app-projects>
