--- a/src/app/home-page/projects/project-item/project-item.component.html
+++ b/src/app/home-page/projects/project-item/project-item.component.html
@@ -13,7 +13,11 @@
   </div>
   <div class="credits" *ngIf="item.credits.length">
     <span *ngFor="let credit of item.credits">
-      {{ credit.role }}: {{ credit.name }} ({{ credit.nickname }})
+      {{ credit.role }}: {{ credit.name }} (<a
+        href="https://instagram.com/_u/{{ credit.nickname }}"
+        target="_blank"
+        >@{{ credit.nickname }}</a
+      >)
     </span>
   </div>
 </div>
