--- a/src/sass/_typographies.scss
+++ b/src/sass/_typographies.scss
@@ -1,5 +1,9 @@
 @use 'sass:math';
 
-@mixin size($level: 0) {
-  font-size: #{math.pow(1.15, $level)}rem;
+@mixin font-size($level: 0) {
+  font-size: size($level);
+}
+
+@function size($level: 0) {
+  @return #{math.pow(1.15, $level)}rem;
 }
