feat(logo): use optimized image directive

--- a/src/app/logo/logo.component.html
+++ b/src/app/logo/logo.component.html
@@ -1,1 +1,7 @@
-<img src="assets/logo.png" alt="Logo" />
+<img
+  [ngSrc]="'assets/logo.png'"
+  alt="LAZARO. Logotype in uppercase letters"
+  width="2757"
+  height="409"
+  [priority]="true"
+/>
