chore(projects): add TODO to optimize preview images

--- a/src/app/home-page/projects/project-item/project-item.component.html
+++ b/src/app/home-page/projects/project-item/project-item.component.html
@@ -22,5 +22,7 @@
   </div>
 </div>
 <div class="images">
+  <!-- TODO: optimize image -->
+  <!--suppress AngularNgOptimizedImage -->
   <img *ngFor="let image of item.images" [src]="image" alt="TODO" />
 </div>
