feat: improve layout (#8)
* feat: improve layout

* feat(projects): add all preview images to chiasma

* test: fix them (comp decl)

* feat(home): set main content element

* chore: fix linting issue unused import

* build(ide): enable ESLint for WebStorm + run on save

* feat(logo): use optimized image directive

* chore(projects): add TODO to optimize preview images

* test: add optimized image to logo

--- a/src/app/home-page/projects/project-item/project-item.component.html
+++ b/src/app/home-page/projects/project-item/project-item.component.html
@@ -13,10 +13,16 @@
   </div>
   <div class="credits" *ngIf="item.credits.length">
     <span *ngFor="let credit of item.credits">
-      {{ credit.role }}: {{ credit.name }} ({{ credit.nickname }})
+      {{ credit.role }}: {{ credit.name }} (<a
+        href="https://instagram.com/_u/{{ credit.nickname }}"
+        target="_blank"
+        >@{{ credit.nickname }}</a
+      >)
     </span>
   </div>
 </div>
 <div class="images">
+  <!-- TODO: optimize image -->
+  <!--suppress AngularNgOptimizedImage -->
   <img *ngFor="let image of item.images" [src]="image" alt="TODO" />
 </div>
