--- a/src/app/home-page/projects/project-item/project-item.component.html
+++ b/src/app/home-page/projects/project-item/project-item.component.html
@@ -21,8 +21,10 @@
     </span>
   </div>
 </div>
-<div class="images">
-  <!-- TODO: optimize image -->
-  <!--suppress AngularNgOptimizedImage -->
-  <img *ngFor="let image of item.images" [src]="image" alt="TODO" />
-</div>
+<swiper-container [appSwiper]="options" init="false">
+  <swiper-slide *ngFor="let image of item.images">
+    <!-- TODO: optimize image, a11y -->
+    <!--suppress HtmlRequiredAltAttribute, AngularNgOptimizedImage -->
+    <img [src]="image" />
+  </swiper-slide>
+</swiper-container>
