chore(projects): fix linter issues

--- a/src/app/home-page/projects/project-item/project-item.component.html
+++ b/src/app/home-page/projects/project-item/project-item.component.html
@@ -25,6 +25,7 @@
   <swiper-slide *ngFor="let image of item.images">
     <!-- TODO: optimize image, a11y -->
     <!--suppress HtmlRequiredAltAttribute, AngularNgOptimizedImage -->
+    <!-- eslint-disable-next-line @angular-eslint/template/alt-text -->
     <img [src]="image" />
   </swiper-slide>
 </swiper-container>
