perf(projects): lazy image loading

--- a/src/app/home-page/projects/project-item/project-item.component.html
+++ b/src/app/home-page/projects/project-item/project-item.component.html
@@ -26,6 +26,6 @@
     <!-- TODO: optimize image, a11y -->
     <!--suppress HtmlRequiredAltAttribute, AngularNgOptimizedImage -->
     <!-- eslint-disable-next-line @angular-eslint/template/alt-text -->
-    <img [src]="image" />
+    <img [src]="image" loading="lazy" />
   </swiper-slide>
 </swiper-container>
