--- a/src/app/logo/logo.component.html
+++ b/src/app/logo/logo.component.html
@@ -1,7 +1,8 @@
 <img
-  [ngSrc]="'assets/logo.png'"
+  src="assets/logo.png"
   alt="LAZARO. Logotype in uppercase letters"
   width="2757"
   height="409"
-  [priority]="true"
+  loading="eager"
+  fetchpriority="high"
 />
