--- a/src/app/home-page/projects/project-item/project-item.component.scss
+++ b/src/app/home-page/projects/project-item/project-item.component.scss
@@ -26,7 +26,7 @@
     // 👇 Seems swiper needs size set to work fine
     width: calc(100% - $textsWidthBigScreen);
     $extraSpace: 40px;
-    max-height: calc(100vh - $headerHeight - $logoHeight - $extraSpace);
+    height: calc(100vh - $headerHeight - $logoHeight - $extraSpace);
 
     swiper-slide {
       width: auto;
@@ -53,7 +53,7 @@
       order: 1;
 
       $extraSpace: 120px;
-      max-height: calc(100vh - $headerHeight - $logoHeight - $extraSpace);
+      height: calc(100vh - $headerHeight - $logoHeight - $extraSpace);
 
       swiper-slide {
         margin-right: 8px;
@@ -63,7 +63,7 @@
 
   @include breakpoints.s {
     swiper-container {
-      max-height: calc(60vh - $headerHeight - $logoHeight);
+      height: calc(60vh - $headerHeight - $logoHeight);
     }
   }
 
