--- a/src/app/home-page/projects/project-item/project-item.component.scss
+++ b/src/app/home-page/projects/project-item/project-item.component.scss
@@ -34,6 +34,24 @@
     }
   }
 
+  $balancedLuminanceColor: lighten(black, 50%);
+
+  swiper-container::part(button-prev) {
+    color: $balancedLuminanceColor;
+  }
+
+  swiper-container::part(button-next) {
+    color: $balancedLuminanceColor;
+  }
+
+  swiper-container::part(bullet-active) {
+    background-color: $balancedLuminanceColor;
+  }
+
+  swiper-container::part(bullet) {
+    background-color: $balancedLuminanceColor;
+  }
+
   @include breakpoints.until-s {
     flex-wrap: wrap;
     gap: margins.$m;
