--- a/src/app/home-page/projects/project-item/project-item.component.html
+++ b/src/app/home-page/projects/project-item/project-item.component.html
@@ -23,7 +23,7 @@
 </div>
 <swiper-container [appSwiper]="options" init="false">
   <swiper-slide
-    *ngFor="let image of item.images; index as i"
+    *ngFor="let image of item.previewImages; index as i"
     [style.aspect-ratio]="image.width / image.height"
   >
     <!-- TODO: a11y -->
@@ -31,7 +31,7 @@
     <!--suppress HtmlRequiredAltAttribute -->
     <!-- eslint-disable-next-line @angular-eslint/template/alt-text -->
     <img
-      [ngSrc]="image.public_id"
+      [ngSrc]="image.filePath"
       ngSrcset="128w, 256w, 384w, 640w, 750w, 828w, 1080w, 1200w, 1920w"
       sizes="(max-width: 959.98px) 50vw, 33vw"
       [fill]="true"
