--- a/src/app/home-page/projects/projects.component.html
+++ b/src/app/home-page/projects/projects.component.html
@@ -1,4 +1,5 @@
 <app-project-item
-  *ngFor="let item of projects | async"
+  *ngFor="let item of projects | async; first as isFirst"
   [item]="item"
+  [priorityPreviewImages]="isFirst"
 ></app-project-item>
