perf(projects): image optimizations (#11)
* perf(projects): lazy image loading

* build: add compression to SSR server

* feat(projects): serve preview images through cloudinary

* perf: preconnect to cloudinary

* feat(projects): eager load two items, limit height to 500px

* build(ide): add run config to serve publicly

* feat(projects): fixed column number to simplify image optimization

sizes attribute precisely

* feat(projects): add style to swiper accent color

* feat(projects): reduce text size on big screens

* build: add script to fetch image assets from CDN

* build: fetch images list from ImageKit and use it in projects

* refactor: add project service to fetch preview images

* build(lighthouse): remove un-sized images / link names exceptions

* refactor(projects): improve priority implementation

* build: generate logo images list file

refactor project preview service, tasks

* feat(logo): use optimized image from CDN

* build(ide): add run configs for SSR prod

* fix: change preconnect image CDN link

* chore: remove images from project

* build(git): remove Git LFS setup

* build: remove exception for responsive images

--- a/src/app/home-page/projects/project-item/project-item.component.scss
+++ b/src/app/home-page/projects/project-item/project-item.component.scss
@@ -13,7 +13,7 @@
 
   $headerHeight: header.$height;
   $logoHeight: logo.$height;
-  $textsWidthBigScreen: 61ch;
+  $textsWidthBigScreen: 55ch;
 
   .texts {
     display: flex;
@@ -22,21 +22,34 @@
   }
 
   swiper-container {
-    float: left;
     // 👇 Seems swiper needs size set to work fine
     width: calc(100% - $textsWidthBigScreen);
-    $extraSpace: 40px;
+    $extraSpace: 48px;
     max-height: calc(100vh - $headerHeight - $logoHeight - $extraSpace);
 
     swiper-slide {
-      width: auto;
-      margin-right: 16px;
-
       img {
-        display: block;
-        height: 100%;
+        object-fit: contain;
       }
     }
+  }
+
+  $balancedLuminanceColor: lighten(black, 50%);
+
+  swiper-container::part(button-prev) {
+    color: $balancedLuminanceColor;
+  }
+
+  swiper-container::part(button-next) {
+    color: $balancedLuminanceColor;
+  }
+
+  swiper-container::part(bullet-active) {
+    background-color: $balancedLuminanceColor;
+  }
+
+  swiper-container::part(bullet) {
+    background-color: $balancedLuminanceColor;
   }
 
   @include breakpoints.until-s {
@@ -52,18 +65,8 @@
       width: 100%;
       order: 1;
 
-      $extraSpace: 120px;
+      $extraSpace: 128px;
       max-height: calc(100vh - $headerHeight - $logoHeight - $extraSpace);
-
-      swiper-slide {
-        margin-right: 8px;
-      }
-    }
-  }
-
-  @include breakpoints.s {
-    swiper-container {
-      max-height: calc(60vh - $headerHeight - $logoHeight);
     }
   }
 
