--- a/src/app/home-page/projects/projects.component.html
+++ b/src/app/home-page/projects/projects.component.html
@@ -1,1 +1,5 @@
-<app-project-item *ngFor="let item of items" [item]="item"></app-project-item>
+<app-project-item
+  *ngFor="let item of projects | async; first as isFirst"
+  [item]="item"
+  [priorityPreviewImages]="isFirst"
+></app-project-item>
