--- a/src/app/home-page/projects/project-item/project-item.component.html
+++ b/src/app/home-page/projects/project-item/project-item.component.html
@@ -22,10 +22,20 @@
   </div>
 </div>
 <swiper-container [appSwiper]="options" init="false">
-  <swiper-slide *ngFor="let image of item.images">
-    <!-- TODO: optimize image, a11y -->
-    <!--suppress HtmlRequiredAltAttribute, AngularNgOptimizedImage -->
+  <swiper-slide
+    *ngFor="let image of previewImages | async; index as i"
+    [style.aspect-ratio]="image.width / image.height"
+  >
+    <!-- TODO: a11y -->
+    <!-- Keep in sync with breakpoints SCSS. srcset subset from Angular defaults -->
+    <!--suppress HtmlRequiredAltAttribute -->
     <!-- eslint-disable-next-line @angular-eslint/template/alt-text -->
-    <img [src]="image" />
+    <img
+      [ngSrc]="image.filePath"
+      ngSrcset="128w, 256w, 384w, 640w, 750w, 828w, 1080w, 1200w, 1920w"
+      sizes="(max-width: 959.98px) 50vw, 33vw"
+      [fill]="true"
+      [priority]="priorityPreviewImages && i < SLIDES_PER_VIEW"
+    />
   </swiper-slide>
 </swiper-container>
