--- a/src/sass/_typographies.scss
+++ b/src/sass/_typographies.scss
@@ -1,6 +1,28 @@
 @use 'sass:math';
 
-@mixin font-size($level: 0) {
+@mixin styles {
+  @import '@fontsource/fira-sans/300.css';
+  @import '@fontsource/fira-sans/400.css';
+  @import '@fontsource/fira-sans/700.css';
+}
+
+@mixin body-family {
+  font-family: 'Fira Sans', sans-serif;
+}
+
+@mixin light {
+  font-weight: 300;
+}
+
+@mixin regular {
+  font-weight: 400; /* normal */
+}
+
+@mixin bold {
+  font-weight: 700; /* bold */
+}
+
+@mixin size($level: 0) {
   font-size: size($level);
 }
 
