--- a/src/app/projects-page/projects-page.component.html
+++ b/src/app/projects-page/projects-page.component.html
@@ -1,3 +1,5 @@
-<main>
-  <app-projects></app-projects>
-</main>
+<app-project-item
+  *ngFor="let item of projects | async; first as isFirst"
+  [item]="item"
+  [priorityPreviewImages]="isFirst"
+></app-project-item>
