--- a/src/sass/_logo.scss
+++ b/src/sass/_logo.scss
@@ -1,5 +1,5 @@
 @use 'paddings';
 
-$vertical-padding: paddings.$m;
-$image-height: 100px;
-$height: calc($image-height + $vertical-padding * 2);
+$padding-vertical: paddings.$m;
+$height-image: 100px;
+$height: calc($height-image + $padding-vertical * 2);
