--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-header></app-header>
 <app-logo></app-logo>
-<router-outlet></router-outlet>
+<main>
+  <router-outlet></router-outlet>
+</main>
