--- a/src/app/logo/logo.component.scss
+++ b/src/app/logo/logo.component.scss
@@ -1,5 +1,6 @@
 @use 'breakpoints';
 @use 'logo';
+@use 'page';
 @use 'margins';
 @use 'paddings';
 
@@ -14,7 +15,7 @@
   display: flex;
   justify-content: center;
 
-  padding: logo.$vertical-padding paddings.$m;
+  padding: logo.$padding-vertical page.$padding-horizontal;
 
   /** UGLY
   margin-bottom: margins.$xl;
@@ -25,7 +26,7 @@
   **/
 
   img {
-    max-height: logo.$image-height;
+    max-height: logo.$height-image;
     width: auto;
   }
 }
