--- a/src/app/logo/logo.component.html
+++ b/src/app/logo/logo.component.html
@@ -1,10 +1,12 @@
 <!-- srcset subset from Angular defaults -->
-<img
-  [ngSrc]="horizontal.filePath"
-  [alt]="horizontal.alt"
-  [width]="horizontal.width"
-  [height]="horizontal.height"
-  [priority]="true"
-  ngSrcset="128w, 256w, 384w, 640w, 750w, 828w, 1080w, 1200w, 1920w, 2048w, 3840w"
-  sizes="100vw"
-/>
+<a routerLink="/">
+  <img
+    [ngSrc]="horizontal.filePath"
+    [alt]="horizontal.alt"
+    [width]="horizontal.width"
+    [height]="horizontal.height"
+    [priority]="true"
+    ngSrcset="128w, 256w, 384w, 640w, 750w, 828w, 1080w, 1200w, 1920w, 2048w, 3840w"
+    sizes="100vw"
+  />
+</a>
