--- a/src/sass/_anchors.scss
+++ b/src/sass/_anchors.scss
@@ -1,4 +1,5 @@
 @use 'typographies';
+@use 'animations';
 
 @mixin theme($accent-color) {
   // https://css-tricks.com/css-link-hover-effects/#aa-the-growing-background-link-hover-effect
@@ -20,7 +21,8 @@
     width: 100%;
     height: 8px;
     z-index: -1;
-    transition: all 0.3s ease-in-out;
+    transition-property: all;
+    @include animations.standard;
   }
 
   a:hover::before {
