feat: update theme color

--- a/src/sass/_theme.scss
+++ b/src/sass/_theme.scss
@@ -1,1 +1,5 @@
-$accent: hsla(196, 61%, 58%, 0.75);
+//👇 Logo
+//$accent: #e5e020;
+$accent: #99990f;
+// 👇 From the Internet
+//$accent: hsla(196, 61%, 58%, 0.75);
