--- a/src/sass/_theme.scss
+++ b/src/sass/_theme.scss
@@ -1,5 +1,5 @@
-//👇 Logo
-//$accent: #e5e020;
-$accent: #99990f;
+@use 'sass:color';
+
 // 👇 From the Internet
-//$accent: hsla(196, 61%, 58%, 0.75);
+$accent: hsla(196, 61%, 58%, 0.75);
+$background: color.change($accent, $lightness: 98%);
