--- a/src/app/project-page/project-page.component.html
+++ b/src/app/project-page/project-page.component.html
@@ -2,7 +2,9 @@
   class="lookbook"
   *ngFor="let lookbook of lookbooks | async; index as lookbookIndex"
 >
-  <h2>Lookbook {{ lookbookIndex + 1 }}</h2>
+  <h2>
+    Look {{ lookbookIndex + 1 }} "{{ lookbookNames[lookbookIndex].name }}"
+  </h2>
   <swiper-container [appSwiper]="lookbook.swiperOptions" init="false">
     <swiper-slide
       *ngFor="let image of lookbook.images; index as imageIndex"
