feat(projects): remove max width in swiper images

--- a/src/app/project-page/lookbooks/lookbook/lookbook.component.html
+++ b/src/app/project-page/lookbooks/lookbook/lookbook.component.html
@@ -15,7 +15,7 @@
     <img
       [ngSrc]="image.filePath"
       ngSrcset="128w, 256w, 384w, 640w, 750w, 828w, 1080w, 1200w, 1920w"
-      sizes="(max-width: 959.98px) 50vw, 33vw"
+      sizes="45vw, 33vw"
       [fill]="true"
       [priority]="priority && imageIndex < MAX_SLIDES_PER_VIEW"
       [alt]="image.alt || DEFAULT_IMAGE_ALT"
