perf: improve responsive images using linter

--- a/src/app/logo/logo.component.html
+++ b/src/app/logo/logo.component.html
@@ -7,6 +7,6 @@
     [height]="logoImages.horizontal.height"
     [priority]="true"
     ngSrcset="128w, 256w, 384w, 640w, 750w, 828w, 1080w, 1200w, 1920w, 2048w, 3840w"
-    sizes="100vw"
+    sizes="674px, 92.27vw"
   />
 </a>
