--- a/src/app/project-page/lookbooks/lookbook/lookbook.component.html
+++ b/src/app/project-page/lookbooks/lookbook/lookbook.component.html
@@ -12,6 +12,7 @@
   >
     <!-- TODO: a11y -->
     <!-- Keep in sync with breakpoints SCSS. srcset subset from Angular defaults -->
+    <!-- Added 320w to make Lighthouse happy -->
     <img
       [ngSrc]="image.filePath"
       ngSrcset="128w, 256w, 320w, 384w, 640w, 750w, 828w, 1080w, 1200w, 1920w"
