--- a/src/app/project-page/lookbooks/lookbook/lookbook.component.html
+++ b/src/app/project-page/lookbooks/lookbook/lookbook.component.html
@@ -12,10 +12,11 @@
   >
     <!-- TODO: a11y -->
     <!-- Keep in sync with breakpoints SCSS. srcset subset from Angular defaults -->
+    <!-- Added 320w to make Lighthouse happy -->
     <img
       [ngSrc]="image.filePath"
-      ngSrcset="128w, 256w, 384w, 640w, 750w, 828w, 1080w, 1200w, 1920w"
-      sizes="(max-width: 959.98px) 50vw, 33vw"
+      ngSrcset="128w, 256w, 320w, 384w, 640w, 750w, 828w, 1080w, 1200w, 1920w"
+      sizes="calc(50vw - 16px), 33.33vw"
       [fill]="true"
       [priority]="priority && imageIndex < MAX_SLIDES_PER_VIEW"
       [alt]="image.alt || DEFAULT_IMAGE_ALT"
