--- a/src/app/projects-page/project-item/project-item.component.html
+++ b/src/app/projects-page/project-item/project-item.component.html
@@ -20,23 +20,13 @@
       </p>
     </div>
   </div>
-  <swiper-container [appSwiper]="options" init="false">
-    <swiper-slide
-      *ngFor="let image of previewImages | async; index as i"
-      [style.aspect-ratio]="image.width / image.height"
-    >
-      <!-- TODO: a11y -->
-      <!-- Keep in sync with breakpoints SCSS. srcset subset from Angular defaults -->
-      <img
-        [ngSrc]="image.filePath"
-        ngSrcset="128w, 256w, 384w, 640w, 750w, 828w, 1080w, 1200w, 1920w"
-        sizes="(max-width: 959.98px) 50vw, 33vw"
-        [fill]="true"
-        [priority]="priorityPreviewImages && i < SLIDES_PER_VIEW"
-        [alt]="image.alt || DEFAULT_IMAGE_ALT"
-      />
-    </swiper-slide>
-  </swiper-container>
+  <app-image-swiper
+    [images]="previewImages | async"
+    sizes="calc(50vw - 16px), 33.33vw"
+    [srcSet]="srcSet"
+    [priority]="priority"
+    [swiperOptions]="CUSTOM_SWIPER_OPTIONS"
+  ></app-image-swiper>
 </div>
 <div class="credits" *ngIf="item.credits.length">
   <span *ngFor="let credit of item.credits">
