--- a/src/app/projects-page/project-item/project-item.component.scss
+++ b/src/app/projects-page/project-item/project-item.component.scss
@@ -5,7 +5,6 @@
 @use 'paddings';
 @use 'page';
 @use 'typographies';
-@use 'swiper';
 
 :host {
   display: flex;
@@ -21,7 +20,9 @@
   $height-header: header.$height;
   $height-logo: logo.$height;
   $height-page-padding: page.$padding-vertical;
-  $height-before: calc($height-header + $height-logo + $height-page-padding);
+  $height-before: calc(
+    $height-header + $height-logo + $height-page-padding * 2
+  );
   $texts-width-big-screen: 55ch;
 
   .texts {
@@ -30,19 +31,11 @@
     width: $texts-width-big-screen;
   }
 
-  @include swiper.theme;
-
-  swiper-container {
+  app-image-swiper {
     // 👇 Seems swiper needs size set to work fine
     width: calc(100% - $texts-width-big-screen);
     $extra-space: 48px;
     max-height: calc(100vh - $height-before - $extra-space);
-
-    swiper-slide {
-      img {
-        object-fit: contain;
-      }
-    }
   }
 
   @include breakpoints.until-s {
@@ -56,7 +49,7 @@
       order: 2;
     }
 
-    swiper-container {
+    app-image-swiper {
       width: 100%;
       order: 1;
 
