--- a/src/app/projects-page/projects-page.component.html
+++ b/src/app/projects-page/projects-page.component.html
@@ -1,5 +1,5 @@
 <app-project-item
   *ngFor="let item of projects | async; first as isFirst"
   [item]="item"
-  [priorityPreviewImages]="isFirst"
+  [priority]="isFirst"
 ></app-project-item>
