refactor: use image swiper in lookbook

--- a/src/app/project-page/lookbooks/lookbook/lookbook.component.scss
+++ b/src/app/project-page/lookbooks/lookbook/lookbook.component.scss
@@ -1,30 +1,14 @@
 @use 'margins';
-@use 'swiper';
-@use 'header';
-@use 'logo';
-@use 'page';
 
 :host {
   display: flex;
   flex-direction: column;
   gap: margins.$m;
   text-align: center;
+  align-items: center;
 
-  @include swiper.theme;
-
-  swiper-container {
-    $height-header: header.$height;
-    $height-logo: logo.$height;
-    $height-page-padding: page.$padding-vertical;
-    $height-before: calc($height-header + $height-logo + $height-page-padding);
-    $extra-space: margins.$xxl;
-
-    swiper-slide {
-      max-height: calc(100vh - $height-before - $extra-space) !important;
-
-      img {
-        object-fit: contain;
-      }
-    }
+  app-image-swiper {
+    width: 100%;
+    //ℹ️ max-width set by component for big screens
   }
 }
