--- a/src/app/projects-page/project-item/project-item.component.html
+++ b/src/app/projects-page/project-item/project-item.component.html
@@ -25,7 +25,7 @@
     sizes="calc(50vw - 16px), 33.33vw"
     [srcSet]="srcSet"
     [priority]="priority"
-    [swiperOptions]="CUSTOM_SWIPER_OPTIONS"
+    [customSwiperOptions]="CUSTOM_SWIPER_OPTIONS"
   ></app-image-swiper>
 </div>
 <div class="credits" *ngIf="item.credits.length">
