--- a/src/app/image-swiper/image-swiper.component.html
+++ b/src/app/image-swiper/image-swiper.component.html
@@ -1,7 +1,7 @@
-<ng-container *ngIf="_images && _images.length">
+<ng-container *ngIf="images && images.length">
   <swiper-container [appSwiper]="_swiperOptions" init="false">
     <swiper-slide
-      *ngFor="let image of _images; index as i"
+      *ngFor="let image of images; index as i"
       [style.aspect-ratio]="image.width / image.height"
     >
       <img
@@ -9,7 +9,7 @@
         [ngSrcset]="srcSet"
         [sizes]="sizes"
         [fill]="true"
-        [priority]="priority && i < (maxSlidesPerView ?? 0)"
+        [priority]="priority && i < (_maxSlidesPerView ?? 0)"
         [alt]="image.alt || DEFAULT_IMAGE_ALT"
       />
     </swiper-slide>
