--- a/src/app/project-page/lookbooks/lookbook/lookbook.component.html
+++ b/src/app/project-page/lookbooks/lookbook/lookbook.component.html
@@ -5,21 +5,12 @@
   </ng-container>
   <ng-container *ngIf="lookbook.name">"{{ lookbook.name }}"</ng-container>
 </h2>
-<swiper-container [appSwiper]="swiperOptions" init="false">
-  <swiper-slide
-    *ngFor="let image of lookbook.images; index as imageIndex"
-    [style.aspect-ratio]="image.width / image.height"
-  >
-    <!-- TODO: a11y -->
-    <!-- Keep in sync with breakpoints SCSS. srcset subset from Angular defaults -->
-    <!-- Added 320w to make Lighthouse happy -->
-    <img
-      [ngSrc]="image.filePath"
-      ngSrcset="128w, 256w, 320w, 384w, 640w, 750w, 828w, 1080w, 1200w, 1920w"
-      sizes="calc(50vw - 16px), 33.33vw"
-      [fill]="true"
-      [priority]="priority && imageIndex < MAX_SLIDES_PER_VIEW"
-      [alt]="image.alt || DEFAULT_IMAGE_ALT"
-    />
-  </swiper-slide>
-</swiper-container>
+<app-image-swiper
+  [images]="lookbook.images"
+  [srcSet]="srcSet"
+  [sizes]="'calc(50vw - 16px), ' + MAX_SLIDE_WIDTH_PX + 'px'"
+  [priority]="priority"
+  [customSwiperOptions]="CUSTOM_SWIPER_OPTIONS"
+  [style.max-width]="MAX_WIDTH_PX + 'px'"
+>
+</app-image-swiper>
