feat: add design book

--- a/src/app/project-page/project-page.component.html
+++ b/src/app/project-page/project-page.component.html
@@ -1,2 +1,3 @@
 <app-lookbooks [slug]="slug"></app-lookbooks>
 <app-tech-material [slug]="slug"></app-tech-material>
+<app-design-book [slug]="slug"></app-design-book>
